# history

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: main.json
examples/tauri-app/src-tauri/src/: lib.rs
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: read_history.toml
permissions/schemas/: schema.json
src/: commands.rs  config.rs  database.rs  desktop.rs  error.rs  history.rs  lib.rs  mobile.rs  shared.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
