[package]
name = "tauri-plugin-shion-history"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-shion-history"

[dependencies]
tauri = { version = "2.0.0-beta.10" }
serde = "1.0"
thiserror = "1.0"
glob = "0.3.1"
lazy_static = "1.4.0"
home = "0.5.9"
serde_json = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.8", features = ["build"] }
