[package]
name = "tauri-plugin-shion-history"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-shion-history"

[dependencies]
tauri = { version = "2.0.0-rc.0" }
serde = "1.0"
thiserror = "1.0"
glob = "0.3.1"
lazy_static = "1.4.0"
home = "0.5.9"
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"]}
parking_lot = "0.12.1"
tempfile = "3"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.0", features = ["build"] }
